commit seguna pre entrega

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,4 +1,3 @@
-<div>Todo listo para trabajar con Websockets</div>
 <div>
     {{#each info}}
     <div>
@@ -13,4 +12,4 @@
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/public/script.js"></script>
+<script src="/js/script.js"></script>
