--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,4 +1,7 @@
 <div>
+    <h1>Bienvenido {{user}}</h1>
+    <h2>Products</h2>
+    <a href="http://localhost:8080/logout">LogOut</a>
     {{#each info}}
     <div>
         <h2>Producto: {{this.title}}</h2>
