proceso login y registro

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,19 +1,19 @@
 <div>
-    <h1>Bienvenido {{user}}</h1>
+    <h1>Welcome {{user}}</h1>
     <h2>Products</h2>
     <a href="http://localhost:8080/logout">LogOut</a>
     {{#each info}}
     <div>
-        <h2>Producto: {{this.title}}</h2>
+        <h2>Product: {{this.title}}</h2>
         <div>
             <p>Id: {{this._id}}</p>
-            <p>Descripción: {{this.description}}</p>
-            <p>Precio: {{this.price}}</p>
-            <p>Categoría: {{this.category}}</p>
-            <p>Código: {{this.code}}</p>
+            <p>Description: {{this.description}}</p>
+            <p>Price: {{this.price}}</p>
+            <p>Category: {{this.category}}</p>
+            <p>Code: {{this.code}}</p>
             <p>Stock: {{this.stock}}</p>
         </div>
-        <button class="btnAgregar">Agregar al carrito</button>
+        <button class="btnAgregar">Add to cart</button>
     </div>
     {{/each}}
 </div>
