--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,14 +1,9 @@
 <div>
         <div>
-            <a href="/products">
-                <span>Home</span>
-            </a>
-        </div>
-        <div>
-            <form>
             <div>
                 <h3>Log In</h3>
             </div>
+            <form id="loginForm">
             <div>
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" required>
@@ -19,5 +14,8 @@
                 <button type="submit">Ok</button>
             </div>
             </form>
+        </div>
+        <div>
+            <p>You don't have an account? <a href="/register">Sign up here</a></p>
         </div>
     </div>
