logica admin/usuario

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,5 +1,6 @@
 <div>
-    <h1>Welcome {{user}}</h1>
+    <h3>{{user.rol}}</h3>
+    <h1>Welcome {{user.name}}</h1>
     <h2>Products</h2>
     <a href="http://localhost:8080/logout">LogOut</a>
     {{#each info}}
