login con github

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -16,6 +16,10 @@
             </form>
         </div>
         <div>
+            <h3>Or..</h3>
+            <a href="/sessions/github"><p>Login with Github</p></a>
+        </div>
+        <div>
             <p>You don't have an account? <a href="/register">Sign up here</a></p>
         </div>
     </div>
