--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -19,7 +19,11 @@
             <button id="btnRegister" type="submit">Sign up</button>
         </div>
         <div>
-            <p>If you already have an account, <a href="/login">Sign in</a>.</p>
+            <h3>Or..</h3>
+            <a href="/sessions/github"><p>Sign Up with Github</p></a>
+        </div>
+        <div>
+            <p>If you already have an account, <a href="/">Sign in</a>.</p>
         </div>
     </form>
 </div>
