--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -1,14 +1,22 @@
 <div>
-    <h2>Carrito: {{cid}}</h2>
+    <a href="/products">Volver a lista de productos</a>
+    <h2>Tu Carrito:</h2>
+    <span id="cart" cid={{cid}}></span>
     <h3>Productos</h3>
-    {{#each info}}
+    {{#each cartProducts}}
     <div>
         <div>
-            <p>Producto: {{this.product}}</p>
+            <p>---------------------------</p>
+            <p>Producto (id): {{this.product}}</p>
             <p>Cantidad: {{this.quantity}}</p>
         </div>
+        <button class="btnsDelete" id="btnDelete" pid={{this.product}}>Delete from cart</button>
     </div>
     {{/each}}
+    <p>---------------------------</p>
+    <h3>Subtotal:</h3>
+    <button id="clean">Vaciar carrito</button><br><br>
+    <button id="purchase">Comprar</button>
 </div>
 
 <script src="/daos/mongoManagers/carts.manager.js"></script>
