--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,19 +1,21 @@
 <div>
-    <h1>Welcome!</h1>
+    <h1>Welcome {{user.first_name}}!</h1>
+    <span id="cart" cid={{user.cart}}></span>
     <h2>Products</h2>
-    <a href="http://localhost:8080/logout">LogOut</a>
+    <a href="http://localhost:8080/logout">LogOut</a><br> <br>
+    <a href="/carts/{{user.cart}}">Ir al carrito</a>
     {{#each products}}
     <div>
         <h2>Product: {{this.title}}</h2>
         <div>
+            <h3>Price: {{this.price}}</h3>
             <p>Id: {{this._id}}</p>
             <p>Description: {{this.description}}</p>
-            <p>Price: {{this.price}}</p>
             <p>Category: {{this.category}}</p>
             <p>Code: {{this.code}}</p>
             <p>Stock: {{this.stock}}</p>
-        </div>
-        <button class="btnAgregar">Add to cart</button>
+        </div> 
+        <button class="btnAgregar" id="btnAddToCart" pid={{this._id}}>Add to cart</button>
     </div>
     {{/each}}
 </div>
