--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -24,4 +24,4 @@
     </div>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/script.js"></script>
+<script src="/js/socket.script.js"></script>
