router de users

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -17,7 +17,7 @@
         </div>
         <div>
             <h3>Or..</h3>
-            <a href="/api/users/github"><p>Login with Github</p></a>
+            <a href="/api/sessions/github"><p>Login with Github</p></a>
         </div>
         <div>
             <p>You don't have an account? <a href="/register">Sign up here</a></p>
