--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -20,7 +20,7 @@
         </div>
         <div>
             <h3>Or..</h3>
-            <a href="/api/users/github"><p>Sign Up with Github</p></a>
+            <a href="/api/sessions/github"><p>Sign Up with Github</p></a>
         </div>
         <div>
             <p>If you already have an account, <a href="/">Sign in</a>.</p>
