--- a/src/views/users.handlebars
+++ b/src/views/users.handlebars
@@ -1,6 +1,6 @@
 <div>
-    <h1>Admin control</h1>
-    <a href="/products">Volver a lista de productos</a>
+    <h1>Administración de usuarios</h1>
+    <a href="/home">Volver al inicio</a>
     <h2>Users:</h2>
     <p>______________________________________________________</p>
     {{#each users}}
