--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,16 +1,5 @@
-<div>
-    <h1>HOME</h1>
-    {{#each info}}
-    <div>
-        <h2>Producto: {{this.title}}</h2>
-        <div>
-            <p>Descripción: {{this.description}}</p>
-            <p>Precio: {{this.price}}</p>
-            <p>Id: {{this.id}}</p>
-        </div>
-    </div>
-    {{/each}}
-</div>
-
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/socket.script.js"></script>
+<h1>Welcome {{username}}!</h1>
+    <span id="cart" cid={{user.cart}}></span>
+    <a href="/carts/{{user.cart}}">Ir al carrito</a><br><br>
+    <a href="/products">Ver lista de productos</a><br> <br>
+    <a href="http://localhost:8080/logout">LogOut</a>
