--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,11 +1,9 @@
 <div>
-    <h1>Welcome {{username}}!</h1>
     <span id="cart" cid={{user.cart}}></span>
-    <a href="{{access.ruta}}">{{access.texto}}</a><br>
+    <a href="/home">Volver al inicio</a><br><br>
+    <a href="/carts/{{user.cart}}">Ir al carrito</a><br>
     <h2>Products</h2>
-    <a href="http://localhost:8080/logout">LogOut</a><br> <br>
-    <a href="/carts/{{user.cart}}">Ir al carrito</a>
-    {{#each products}}
+    {{#each filteredProducts}}
     <div>
         <h2>Product: {{this.title}}</h2>
         <div>
@@ -16,7 +14,12 @@
             <p>Code: {{this.code}}</p>
             <p>Stock: {{this.stock}}</p>
         </div>
-        <button class="btnAgregar" id="btnAddToCart" pid={{this._id}} style="visibility: visible;">Add to cart</button>
+            {{#if this.hasStock}}
+                <button class="btnAgregar" id="btnAddToCart" pid={{this._id}}>Add to cart</button>
+            {{else}}
+                <button class="btnAgregar" id="btnAddToCart" pid={{this._id}} disabled="true">Add to cart</button>
+            {{/if}}
+
     </div>
     {{/each}}
 </div>
