--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -16,7 +16,7 @@
     {{/each}}
     <div style="visibility: {{visibility}}"  >
     <p>---------------------------</p>
-    <h3>Subtotal:</h3>
+    <h3>Subtotal: ${{subtotal}}</h3>
     <button id="clean">Vaciar carrito</button><br><br>
     <button id="purchase" >Comprar</button>
     </div>
