--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -2,4 +2,4 @@
     <span id="cart" cid={{user.cart}}></span>
     <a href="/carts/{{user.cart}}">Ir al carrito</a><br><br>
     <a href="/products">Ver lista de productos</a><br> <br>
-    <a href="http://localhost:8080/logout">LogOut</a>
+    <a href="/logout">LogOut</a>
