--- a/src/views/admins.handlebars
+++ b/src/views/admins.handlebars
@@ -1,4 +1,4 @@
 <h1>Welcome {{username}}!</h1>
     <a href="/manageProducts">Administrar productos</a><br><br>
     <a href="/users">Administrar Usuarios</a><br><br>
-    <a href="http://localhost:8080/logout">LogOut</a>
+    <a href="/logout">LogOut</a>
